<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <Button
        android:id="@+id/meteoActivity"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="416dp"
        android:text="@string/METEO"
        app:backgroundTint="#E3CF20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/contact"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="472dp"
        android:text="@string/CONTACTS"
        app:backgroundTint="#F60A25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/capteur"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="528dp"
        android:text="@string/ACCELEROMETRE"
        app:backgroundTint="#C85CF6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/tactile"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="584dp"
        android:text="@string/TACTILE"
        app:backgroundTint="#5CF671"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/Bonjour"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="136dp"
        android:text="@string/BONJOUR"
        app:backgroundTint="#FF5722"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/Photo"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="192dp"
        android:text="@string/PHOTO"
        app:backgroundTint="#673AB7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Chronometre"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="248dp"
        android:text="@string/CHRONOMETRE"
        app:backgroundTint="#4CAF50"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/Image"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="304dp"
        android:text="@string/AFFICHER_IMAGE"
        app:backgroundTint="#E91E63"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/LongActivity"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="360dp"
        android:text="@string/LONGUE_MISSION"
        app:backgroundTint="#2196F3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>